--- a/astrobeasts/templates/game.html
+++ b/astrobeasts/templates/game.html
@@ -33,8 +33,8 @@
     <div id="gameContainer"></div>
     
     <!-- import phaser -->
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <!-- import main.js as starting point for phaser scenes -->
-    <script type="module" src="{{ url_for('static', filename='scripts/main.js') }}"></script>
+    <script type="module" src="../static/scripts/main.js"></script>
 </body>
 </html>
