--- a/astrobeasts/templates/game.html
+++ b/astrobeasts/templates/game.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/6258c12eb7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="static/styles/style.css">
+
     
     <!-- some internal styling, should use external style.css file -->
     <style>
